--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "next": "14.2.29",
     "react": "^18",
