--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.16.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "next": "14.2.29",
